--- a/Questions.Rmd
+++ b/Questions.Rmd
@@ -1365,8 +1365,8 @@ plot(pls.fit2, "loadings", comps = 1:8, legendpos = "topright", xlab = "nm")
 
 #This gives a pairwise plot of the score values for the three first components.
 #Score plots are often used to look for patterns, groups or outliers in the data. 
-#The scores represents the different lakes, so it doesn't make sense to label them with the varibale names
-plot(pls.fit2, plottype = "scores", comps = 1:3,labels = names(coefficients))
+#The scores represents the different lakes
+plot(pls.fit2, plottype = "scores", comps = 1:3,labels = data.pls$Stationsnamn)
 #study the predicted vs. measured plot to see if the data needs to be transformed
 plot(pls.fit2, ncomp = best.dims, asp = 1, line = TRUE)
 
