--- a/Questions.Rmd
+++ b/Questions.Rmd
@@ -1,9 +1,9 @@
 ---
 title: "MVA Course"
 output:
-  html_document: default
-  pdf_document: default
   html_notebook: default
+  pdf_document: default
+  html_document: default
 ---
 ```{r setup, include=FALSE, message=FALSE, warning=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
@@ -1295,17 +1295,96 @@ iva.df <- as.data.frame(iva$indval)
 arrange(rownames_to_column(iva.df), desc(HF))
 ```
 
+***
 <br>
 
 ***
 
 
-### <span style="color:cornflowerblue">Question 29: Molecular Data</span>
+### <span style="color:cornflowerblue">Question 29: DFA</span>
 
-#### <span style="color:forestgreen">Molecular </span>
+#### <span style="color:forestgreen">Discriminant Function Analysis </span>
+
+The algorithm starts by finding directions that maximize the separation between classes, then use these directions to predict the class of individuals. These directions, called linear discriminants, are linear combinations of predictor variables. The Dune dataset is too small to really make use of this method (since we need to split the data into test and training parts) so we will here use the classic "Iris" dataset of different Iris plant species and the dimensions of different parts of their flowers
+
+```{r DFA}
+# Prepare the data ####
+library(caret) 
+library(MASS)
+# Load the data
+data("iris")
+
+# Split the data into training (80%) and test set (20%)
+set.seed(123)
+training.samples <- iris$Species %>%
+  createDataPartition(p = 0.8, list = FALSE)
+train.data <- iris[training.samples, ]
+test.data <- iris[-training.samples, ]
+
+# Discriminant analysis can be affected by the scale/unit in which predictor variables are measured. 
+# It’s generally recommended to standardize/normalize continuous predictor before the analysis.
+# Normalize the data. Categorical variables are automatically ignored.
+# Estimate preprocessing parameters
+preproc.param <- train.data %>% 
+  preProcess(method = c("center", "scale"))
+# Transform the data using the estimated parameters
+train.transformed <- preproc.param %>% predict(train.data)
+test.transformed <- preproc.param %>% predict(test.data)         
+
+# Linear discriminant analysis - LDA ####
+library(MASS)
+# Fit the model
+model <- lda(Species~., data = train.transformed)
+
+model
+plot(model)
+
+```
+LDA determines group means and computes, for each individual, the probability of belonging to the different groups. Each observation/individual is then assigned to the group with the highest probability score.
+ 
+The lda() outputs contain the following elements:
+   
+Prior probabilities of groups: the proportion of training observations in each group.
+For example 33% of the training observations are in the Setosa group.
+
+Group means: group center of gravity. Shows the mean of each variable in each group.
+
+Coefficients of linear discriminants: Shows the linear combination of predictor variables that are used
+to form the LDA decision rule. If the predictor variables are standardized before computing LDA,
+the discriminator weights can be used as measures of variable importance for feature selection.
+ 
+Using the function plot() produces plots of the linear discriminants,
+obtained by computing LD1 and LD2 for each of the training observations.
 
 ```{r}
-#to follow, Stefan
+# Make predictions
+predictions <- model %>% predict(test.transformed)
+# Model accuracy
+mean(predictions$class==test.transformed$Species)
+
+# The predict() function returns the following elements:
+#   
+# class: predicted classes of observations.
+# posterior: is a matrix whose columns are the groups, rows are the individuals and values are the posterior probability that the corresponding observation belongs to the groups.
+# x: contains the linear discriminants, described above
+
+# Predicted classes
+head(predictions$class, 6)
+# Predicted probabilities of class membership.
+head(predictions$posterior, 6) 
+# Linear discriminants
+head(predictions$x, 3) 
+
+lda.data <- cbind(train.transformed, predict(model)$x)
+ggplot(lda.data, aes(LD1, LD2)) +
+  geom_point(aes(color = Species),size=3)
+
+# Model accuracy
+mean(predictions$class==test.transformed$Species)
+
+#More detailed assessment (probably more information than we need!)
+#Calculates a cross-tabulation of observed and predicted classes with associated statistics.
+confusionMatrix(test.data$Species, predictions$class)
 ```
 ***
 <br>
